@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:33:40 brook Exp $
+
+SHA1 (R/remotes_2.1.0.tar.gz) = e49b6befd0b6e803d078af6b67480f975e12c941
+RMD160 (R/remotes_2.1.0.tar.gz) = 931eb670c6e4d956a191db29ad13911d1778c711
+SHA512 (R/remotes_2.1.0.tar.gz) = 835c76dc9f3bc355ef23a5cd4ad3fdaa67d743b9f26367f0eed0652de7ccd717969adb7ecbe437b4ec10b6b08637974f6b578d81f5e69f6f0fa1b9a6e21c71aa
+Size (R/remotes_2.1.0.tar.gz) = 131622 bytes
